@@ -52,6 +52,7 @@ if ($create_sla) {
     $time_from = (int) get_parameter ("time_from", 0);
     $time_to = (int) get_parameter ("time_to", 0);
     $no_holidays = (int) get_parameter ('no_holidays', 0);
+    $sla_type = (int) get_parameter ('sla_type', 0);
 
 	$sql = sprintf ('INSERT INTO tsla (`name`, `description`, id_sla_base,
 		min_response, max_response, max_incidents, `enforced`, five_daysonly, time_from, time_to, max_inactivity, no_holidays)
@@ -87,6 +88,7 @@ if ($update_sla) {
     $time_to = (int) get_parameter ("time_to", 0);
     $max_inactivity = (float) get_parameter ('max_inactivity');
     $no_holidays = (int) get_parameter ('no_holidays', 0);
+    $sla_type = (int) get_parameter ('sla_type', 0);
 
 	$sql = sprintf ('UPDATE tsla SET max_inactivity = %.2f, enforced = %d, description = "%s",
 		name = "%s", max_incidents = %d, min_response = %.2f, max_response = %.2f,
@@ -132,6 +134,7 @@ if ($id || $new_sla) {
         $time_from = 8;
         $time_to = 18;
 		$no_holidays = 1;
+		$sla_type = 0;
 	} else {
 		$sla = get_db_row ('tsla', 'id', $id);
 		$name = $sla['name'];
@@ -146,6 +149,7 @@ if ($id || $new_sla) {
         $time_from = $sla["time_from"];
         $time_to = $sla["time_to"];
         $no_holidays = $sla["no_holidays"];
+        $sla_type = $sla["id_sla_type"];
 
 	}
 
@@ -161,6 +165,12 @@ if ($id || $new_sla) {
 	
 	$table->data[0][2] = print_select_from_sql ('SELECT id, name FROM tsla ORDER BY name',
 		'id_sla_base', $id_sla_base, '', __('None'), 0, true, false, false, __('SLA Base'));
+		
+	$sla_type_arr[0] = __("Normal SLA");
+	$sla_type_arr[1] = __("Third party SLA");
+	$sla_type_arr[2] = __("Both");
+					
+	$table->data[0][3] = print_select ($sla_type_arr, 'sla_type', $sla_type,'', '', '0', true, 0, false, __('SLA Type'));
 
 	$table->data[1][0] = print_label(__('Max. response time (in hours)'), '', 'text', true);
 	$table->data[1][0] .= '&nbsp;'."<input type='text' name='min_response' id='text-min_response' value='$min_response' size='5' maxlenght='100' onChange='hours_to_dms(\"min\")'>";
